--- a/config.env
+++ b/config.env
@@ -1,1 +1,3 @@
 PORT = 8000
+JWT_SECRET = "SECRET_KEY"
+LOCAL_DATABASE = 'mongodb://localhost:27017/outfit?readPreference=primary&appname=MongoDB%20Compass&ssl=false'
