--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "debug": "ndb server.js",
-    "dev": "nodemon server.js"
+    "client": "cd client && npm run start",
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "start": "node server.js"
   },
   "author": "Hemanth",
   "license": "ISC",
@@ -22,6 +25,7 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "ndb": "^1.0.26"
   }
 }
